<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/red"
    tools:context="com.example.jordan.snapchat.TakeNewPhotoActivity">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/TextLabel">
        <EditText android:id="@+id/input_caption"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textShortMessage"
            android:hint="@string/caption_hint"
            android:textColor="@color/white"/>
    </android.support.design.widget.TextInputLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <Spinner
            android:id="@+id/timer_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <ImageView
            android:id="@+id/clock_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/timer_spinner"
            android:layout_toEndOf="@id/timer_spinner"
            android:layout_alignBottom="@id/timer_spinner"
            android:contentDescription="@string/timer_desc"
            android:src="@drawable/ic_timer_white_24dp"/>
    </RelativeLayout>


    <ImageView
        android:id="@+id/display_photo"
        android:contentDescription="@string/display_photo_desc"
        android:layout_width="match_parent"
        android:layout_height="@dimen/image_preview_min_height"
        android:padding="5dp"
        android:layout_gravity="center"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
            <ImageButton
                android:id="@+id/take_photo"
                android:contentDescription="@string/take_photo_desc"
                android:src="@drawable/ic_photo_camera_white_24dp"
                style="@style/ImageButton"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"/>

            <ImageButton
                android:id="@+id/save_photo"
                android:contentDescription="@string/save_photo_desc"
                android:src="@drawable/ic_save_white_24dp"
                style="@style/ImageButton"
                android:layout_centerHorizontal="true"/>

            <ImageButton
                android:id="@+id/send_photo"
                android:contentDescription="@string/send_photo_desc"
                android:src="@drawable/ic_send_white_24dp"
                style="@style/ImageButton"
                android:layout_alignParentEnd ="true"
                android:layout_alignParentRight ="true"/>
    </RelativeLayout>
</LinearLayout>
