<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/red"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/signin_padding_top"
        android:paddingLeft="@dimen/signin_padding_direction"
        android:paddingRight="@dimen/signin_padding_direction">
        
        <ImageView android:src="@drawable/snapchat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"/>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/text_input_margin"
            android:layout_marginBottom="@dimen/text_input_margin"
            android:theme="@style/TextLabel">
            <EditText android:id="@+id/input_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:inputType="textEmailAddress"
                android:hint="@string/email_hint"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/text_input_margin"
            android:layout_marginBottom="@dimen/text_input_margin"
            android:theme="@style/TextLabel">
            <EditText android:id="@+id/input_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:inputType="textPassword"
                android:hint="@string/password_hint"/>
        </android.support.design.widget.TextInputLayout>

        <Button
            style="@style/SignInButton"
            android:id="@+id/login"
            android:text="@string/login"/>

        <Button
            style="@style/SignInButton"
            android:id="@+id/signup"
            android:text="@string/signup" />

    </LinearLayout>


</LinearLayout>